--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "h-utils.js": "^0.5.3",
     "node-sass": "^4.14.1",
     "sass-loader": "^8.0.2",
+    "uglifyjs-webpack-plugin": "^1.1.0",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
