--- a/nginx.conf
+++ b/nginx.conf
@@ -17,6 +17,11 @@ http {
   server {
     listen       80;
     server_name  localhost;
+    location /api/ {
+      proxy_pass http://192.168.8.103:8088;   # 192.168.8.103   192.168.31.215  这里的地址是自己电脑的ip
+      proxy_set_header Host $http_host;
+      proxy_set_header Referer $http_referer;
+    }
     location / {
       root   /app;
       index  index.html;
